--- a/.github/workflows/gh-task-runner-mps.yml
+++ b/.github/workflows/gh-task-runner-mps.yml
@@ -84,6 +84,10 @@ on:
         description: 'Custom Task to run (overwrites previous)'
         required: false
         default: ''
+      num_fewshot:
+        description: 'Number of Fewshot Examples'
+        required: true
+        default: -1
       model_hf_repo:
         description: 'Model Hugging Face Repository'
         required: true
@@ -114,8 +118,27 @@ on:
       #   - 24
       #   - 80
 
+env:
+  # Get the final task
+  RUN_TASK: ${{ github.event.inputs.custom_task || github.event.inputs.run_task }}
+
+  # HF repo to sync to
+  HF_REPO_SYNC: rwkv-x-dev/lm-eval-output
+
+  # Model HF repo
+  MODEL_HF_REPO: ${{ github.event.inputs.model_hf_repo }}
+
+  # Secrets
+  HUGGING_FACE_HUB_TOKEN: ${{secrets.HUGGING_FACE_HUB_TOKEN}}
+
+  # Clean task name, replaces in task name * with _
+  CLEAN_TASK_NAME: ${{ env.RUN_TASK//'*'/'_' }}
+
 jobs:
   gh-task-runner-mps:
+    # Name of the job
+    name: "[MPS-${{ env.RUN_TASK }}] ${{ github.event.inputs.model_hf_repo }} - ${{ github.event.inputs.model_args }}"
+
     # Due to github worker hard limitation, of 24 hours
     # we apply a timeout of 23 hours instead.
     timeout-minutes: 1380
@@ -126,7 +149,7 @@ jobs:
 
     # Actual task setup, and run steps
     steps:
-      - name: Clone
+      - name: Clone repository
         id: checkout
         uses: actions/checkout@v3
         with:
@@ -136,6 +159,50 @@ jobs:
         with:
           python-version: '3.11' 
           
-      - name: Install dependencies
+      - name: Install dependencies / setup project
         run: |
           pip install -e .
+          mkdir -p ./output
+
+      - name: Run Task
+        run: |
+          # Get the final task to run
+          task_to_run=${{ github.event.inputs.custom_task }}
+          if [ -z "$task_to_run" ]; then
+            task_to_run=${{ github.event.inputs.run_task }}
+          fi
+
+          # Check if the few shot setting is larger or euqal to 0
+          if [ ${{ github.event.inputs.num_fewshot }} -ge 0 ]; then
+            lm_eval --model hf \
+            --model_args pretrained=${{ github.event.inputs.model_hf_repo }},${{ github.event.inputs.model_args }} \
+            --tasks $task_to_run \
+            --batch_size ${{ github.event.inputs.batch_size }} \
+            --device mps \
+            --num_fewshot ${{ github.event.inputs.num_fewshot }} \
+            --log_samples --output_path ./output 2>&1 | tee -a ./output/run-log.txt
+          else
+            lm_eval --model hf \
+            --model_args pretrained=${{ github.event.inputs.model_hf_repo }},${{ github.event.inputs.model_args }} \
+            --tasks $task_to_run \
+            --batch_size ${{ github.event.inputs.batch_size }} \
+            --device mps \
+            --log_samples --output_path ./output 2>&1 | tee -a ./output/run-log.txt
+          fi
+
+      - name: Upload outputs to HF
+        if: always()
+        run: |
+          ./gh-task-runner/hf-upload-runner.sh "${{ env.HF_REPO_SYNC }}" "${{ env.MODEL_HF_REPO }}/${{ env.CLEAN_TASK_NAME }}/MPS/${{ github.event.inputs.model_args }}" "./output"
+      # Note that this is meant to be a contigency measure, in case the HF upload failed
+      - name: Save output models
+        uses: actions/upload-artifact@v3
+        # if: failure()
+        if: always()
+        with:
+          name: output-files
+          path: |
+            output/*
+          # retention-days: 90
+
+      
