Update job name in gh-task-runner-mps.yml

--- a/.github/workflows/gh-task-runner-mps.yml
+++ b/.github/workflows/gh-task-runner-mps.yml
@@ -134,7 +134,7 @@ env:
 jobs:
   gh-task-runner-mps:
     # Name of the job
-    name: "[MPS-${{ env.RUN_TASK }}] ${{ github.event.inputs.model_hf_repo }} - ${{ github.event.inputs.model_args }}"
+    name: "[MPS-${{ github.event.inputs.model_hf_repo }}] ${{ github.event.inputs.custom_task || github.event.inputs.run_task }} - ${{ github.event.inputs.model_args }}"
 
     # Due to github worker hard limitation, of 24 hours
     # we apply a timeout of 23 hours instead.
