--- a/.github/workflows/gh-task-runner-mps.yml
+++ b/.github/workflows/gh-task-runner-mps.yml
@@ -5,7 +5,7 @@ on:
       run_task:
         description: 'Task to run'
         required: true
-        default: 'arc'
+        default: 'anli'
         type: choice
         options:
         - anli
