--- a/.github/workflows/gh-task-runner-mps.yml
+++ b/.github/workflows/gh-task-runner-mps.yml
@@ -1779,7 +1779,7 @@ jobs:
         if: always()
         run: |
           CLEANED_TASK=$(echo "${{ github.event.inputs.run_task }}" | sed 's/\*/_/g')
-          HF_SUBDIR_PATH="${{ env.MODEL_HF_REPO }}/$CLEANED_TASK/MPS/${{ github.event.inputs.model_args }}"
+          HF_SUBDIR_PATH="${{ env.MODEL_HF_REPO }}/$CLEANED_TASK/${{ github.event.inputs.model_args }}-num_fewshot=${{ github.event.inputs.num_fewshot }}/MPS/"
           ./gh-task-runner/hf-upload-runner.sh "${{ env.HF_REPO_SYNC }}" "$HF_SUBDIR_PATH" "./output"
       # Note that this is meant to be a contigency measure, in case the HF upload failed
       - name: Save output models
