disable python setup (its preinstalled)

--- a/.github/workflows/gh-task-runner.yml
+++ b/.github/workflows/gh-task-runner.yml
@@ -1745,9 +1745,9 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11' 
+      # - uses: actions/setup-python@v5
+      #   with:
+      #     python-version: '3.11' 
           
       - name: Install dependencies / setup project
         run: |
