--- a/.github/workflows/gh-task-runner.yml
+++ b/.github/workflows/gh-task-runner.yml
@@ -1752,15 +1752,16 @@ jobs:
       - name: Install dependencies / setup project
         run: |
           # Basic dependencies install, and output setup
-          python -m pip install -e .
           mkdir -p ./output
+          python -m pip install -e .
+
+          # Install HF transformers and accelerate
+          python -m pip install accelerate transformers peft sqlitedict
+          python -m pip install lightning==2.1.3 deepspeed==0.12.6 ninja numexpr jsonargparse 'jsonargparse[signatures]' lm-dataformat ftfy sentencepiece tokenizers wandb papermill
 
           # Setup HF cache
           chmod +x ./gh-task-runner/*.sh
           ./gh-task-runner/hf-cache-setup.sh 
-
-          # Install HF transformers and accelerate
-          python -m pip install accelerate transformers peft sqlitedict
 
       - name: Run Task
         run: |
