--- a/.github/workflows/gh-task-runner.yml
+++ b/.github/workflows/gh-task-runner.yml
@@ -1739,11 +1739,8 @@ jobs:
 
     # Actual task setup, and run steps
     steps:
-      - name: Clone repository
-        id: checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          submodules: 'recursive'
 
       # - uses: actions/setup-python@v5
       #   with:
@@ -1756,7 +1753,7 @@ jobs:
           python -m pip install -e .
 
           # Install HF transformers and accelerate
-          python -m pip install accelerate transformers peft sqlitedict
+          python -m pip install accelerate transformers peft sqlitedict evaluate
           # Depencies for rwkv infctx
           python -m pip install lightning==2.1.3 deepspeed==0.12.6 ninja numexpr jsonargparse 'jsonargparse[signatures]' lm-dataformat ftfy sentencepiece tokenizers wandb papermill
 
