--- a/.github/workflows/gh-task-runner.yml
+++ b/.github/workflows/gh-task-runner.yml
@@ -1750,10 +1750,11 @@ jobs:
         run: |
           # Basic dependencies install, and output setup
           mkdir -p ./output
+          python -m pip install .
           python -m pip install -e .
 
           # Install HF transformers and accelerate
-          python -m pip install accelerate transformers peft sqlitedict evaluate
+          python -m pip install accelerate transformers peft sqlitedict evaluate sacrebleu
           # Depencies for rwkv infctx
           python -m pip install lightning==2.1.3 deepspeed==0.12.6 ninja numexpr jsonargparse 'jsonargparse[signatures]' lm-dataformat ftfy sentencepiece tokenizers wandb papermill
 
