--- a/.github/workflows/gh-task-runner.yml
+++ b/.github/workflows/gh-task-runner.yml
@@ -1754,7 +1754,7 @@ jobs:
           python -m pip install -e .
 
           # Install HF transformers and accelerate
-          python -m pip install accelerate transformers peft sqlitedict evaluate sacrebleu
+          python -m pip install accelerate transformers peft sqlitedict evaluate sacrebleu sklearn
           # Depencies for rwkv infctx
           python -m pip install lightning==2.1.3 deepspeed==0.12.6 ninja numexpr jsonargparse 'jsonargparse[signatures]' lm-dataformat ftfy sentencepiece tokenizers wandb papermill
 
