--- a/.github/workflows/gh-task-runner.yml
+++ b/.github/workflows/gh-task-runner.yml
@@ -1753,8 +1753,11 @@ jobs:
           python -m pip install .
           python -m pip install -e .
 
-          # Install HF transformers and accelerate
-          python -m pip install accelerate transformers peft sqlitedict evaluate sacrebleu sklearn
+          # Install the various pip packgaes dependencies
+          python -m pip install poetry
+          poetry export -f requirements.txt --output requirements.txt
+          python -m pip install -r requirements.txt
+
           # Depencies for rwkv infctx
           python -m pip install lightning==2.1.3 deepspeed==0.12.6 ninja numexpr jsonargparse 'jsonargparse[signatures]' lm-dataformat ftfy sentencepiece tokenizers wandb papermill
 
