--- a/.github/workflows/gh-task-runner.yml
+++ b/.github/workflows/gh-task-runner.yml
@@ -1742,9 +1742,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # - uses: actions/setup-python@v5
-      #   with:
-      #     python-version: '3.11' 
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11' 
           
       - name: Install dependencies / setup project
         run: |
@@ -1752,14 +1752,6 @@ jobs:
           mkdir -p ./output
           python -m pip install .
           python -m pip install -e .
-
-          # Install the various pip packgaes dependencies
-          python -m pip install poetry
-          poetry export -f requirements.txt --output requirements.txt
-          python -m pip install -r requirements.txt
-
-          # Depencies for rwkv infctx
-          python -m pip install lightning==2.1.3 deepspeed==0.12.6 ninja numexpr jsonargparse 'jsonargparse[signatures]' lm-dataformat ftfy sentencepiece tokenizers wandb papermill
 
           # Setup HF cache
           chmod +x ./gh-task-runner/*.sh
