disabling fail fast

--- a/.github/workflows/gh-task-runner-LS1.yml
+++ b/.github/workflows/gh-task-runner-LS1.yml
@@ -70,6 +70,8 @@ jobs:
     # Strategy Matrix
     strategy:
       matrix:
+        # Disable fail-fast behavior
+        fail-fast: false 
         # NOTE: There is a matrix limit of 256 on github
         run_task:
           - anli
