--- a/.github/workflows/gh-task-runner-LS1.yml
+++ b/.github/workflows/gh-task-runner-LS1.yml
@@ -72,14 +72,31 @@ jobs:
       # Disable fail-fast behavior
       fail-fast: false 
       matrix:
+
+        # GPU count overwrites, for extra large tasks
+        include:
+          - gpu_count: gpu-count-any
+          # For extra large task, lets isolate them to 8x nodes
+          - run_task: chain_of_thought
+            gpu_count: gpu-count-8
+          - run_task: flan_held_*
+            gpu_count: gpu-count-8
+          - run_task: fld
+            gpu_count: gpu-count-8
+          - run_task: fld_*
+            gpu_count: gpu-count-8
+          # - run_task: gpt3_translation_benchmarks
+          #   gpu_count: gpu-count-8
+        
         # NOTE: There is a matrix limit of 256 on github
         run_task:
           ### Known Problematic tasks (various error reasons - file missing, temp=0, etc)
           ### ----------------------------------------------------------------------------
-          # - anagrams*
+          ## ----
+          ## Need to double check (removed before i started organizing by failure reasons)
+          ## ----
           # - arithmetic_*
           # - asdiv
-          # - babi
           # - bbh
           # - bbh_cot_fewshot
           # # - bbh_cot_fewshot_*
@@ -89,60 +106,76 @@ jobs:
           # # - bbh_fewshot_*
           # - bbh_zeroshot
           # # - bbh_zeroshot_*
-          # - belebele
-          # # - belebele_*
           # - bigbench_*
           # - boolq-seq2seq
+          ## ----
+          ## temp=0 issues
+          ## ----
+          # - anagrams*
+          # - babi
+          # - code2text_*
+          # - codexglue_code2text
+          # - coqa
+          # - cycle_letters
+          # - drop
+          ## ----
+          ## Does not exists / file 404s / broken links
+          ## ----
+          # - csatqa
+          # - csatqa_*
+          # - belebele
+          # # - belebele_*
+          # - generate_until
+          ## ----
+          ## Wierd errors (need to reinvestigate)
+          ## ----
+          # - gpt3_translation_benchmarks
+          # - gsm8k_cot
+          # - headqa
+          # # - headqa_en
+          # # - headqa_es
 
-          ### Some tasks were commented out due to overlaps
+          ### Extra long running tests (>=4hrs on 4x3090)
+          ### Reserved for 8xGPU nodes, put up top for priority
+          ### ----------------------------------------------------------------------------
+          - chain_of_thought
+          - flan_held_*
+          - fld
+          - fld_*
+
+          ### Commented out tasks, are rolled up in their larger non _* varients
           ### ----------------------------------------------------------------------------
           - anli
-          - arc_easy
-          - arc_challenge
+          # - anli_*
           - ai2_arc
-          - anli_*
+          # - arc_easy
+          # - arc_challenge
           - advanced_ai_risk
           # - advanced_ai_risk_fewshot-*
           # - advanced_ai_risk_human-*
           # - advanced_ai_risk_lm-*
           - arithmetic
           - blimp
-          - blimp_*
+          # - blimp_*
           - boolq
           - cb
           - ceval-valid
           # - ceval-valid_*
-          - chain_of_thought
           - cmmlu
           # - cmmlu_*
-          - code2text_*
-          - codexglue_code2text
           - cola
           - copa
-          - coqa
           - crows_pairs
           # - crows_pairs_*
-          - csatqa
-          - csatqa_*
-          - cycle_letters
-          - drop
           - ethics_*
-          - flan_held_*
-          - fld
-          - fld_*
           - freebase
-          - generate_until
           - glue
-          - gpt3_translation_benchmarks
           - gsm8k
-          - gsm8k_cot
           - gsm8k_cot_self_consistency
-          - headqa
-          - headqa_en
-          - headqa_es
           - hellaswag
           - hellaswag_*
           - hendrycks_ethics
+          # NOTE: ifeval requires langdetect
           - ifeval
           - iwslt2017
           - iwslt2017-*
@@ -254,6 +287,7 @@ jobs:
     runs-on: 
       - ${{ github.event.inputs.backend }}
       - gpu-vram-${{ github.event.inputs.gpu_vram }}
+      - ${{ matrix.gpu_count }}
 
     # Actual task setup, and run steps
     steps:
@@ -270,6 +304,9 @@ jobs:
           mkdir -p ./output
           python -m pip install .
           python -m pip install -e .
+
+          # Needed for ifeval
+          python -m pip install langdetect
 
           # Setup HF cache
           chmod +x ./gh-task-runner/*.sh
