add nvidia-smi check

--- a/.github/workflows/gh-task-runner-LS1.yml
+++ b/.github/workflows/gh-task-runner-LS1.yml
@@ -294,6 +294,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: nvidia-smi check (for easy debugging)
+        run: nvidia-smi
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11' 
