--- a/.github/workflows/gh-task-runner-LS1.yml
+++ b/.github/workflows/gh-task-runner-LS1.yml
@@ -83,8 +83,6 @@ jobs:
             gpu_count: gpu-count-8
           - run_task: fld
             gpu_count: gpu-count-8
-          - run_task: fld_*
-            gpu_count: gpu-count-8
           # - run_task: gpt3_translation_benchmarks
           #   gpu_count: gpu-count-8
         
@@ -118,6 +116,14 @@ jobs:
           # - coqa
           # - cycle_letters
           # - drop
+          # - random_insertion
+          # - unscramble
+          # - super-glue-*
+          # - squadv2
+          # - scrolls
+          # - reversed_words
+          # - qasper
+          # # - qasper_*
           ## ----
           ## Does not exists / file 404s / broken links
           ## ----
@@ -126,6 +132,14 @@ jobs:
           # - belebele
           # # - belebele_*
           # - generate_until
+          # - polemo2
+          # # - polemo2_*
+          # - pile
+          # # - pile_*
+          ## ----
+          ## Requires hugging face login
+          ## ----
+          # - toxigen
           ## ----
           ## Wierd errors (need to reinvestigate)
           ## ----
@@ -134,6 +148,15 @@ jobs:
           # - headqa
           # # - headqa_en
           # # - headqa_es
+          # - hellaswag_*
+          # - iwslt2017
+          # # - iwslt2017-*
+          # - wmt-ro-en-t5-prompt
+          # - wmt-t5-prompt
+          # - t0_eval
+          # - storycloze
+          # # - storycloze_*
+          # - self_consistency
 
           ### Extra long running tests (>=4hrs on 4x3090)
           ### Reserved for 8xGPU nodes, put up top for priority
@@ -141,7 +164,7 @@ jobs:
           - chain_of_thought
           - flan_held_*
           - fld
-          - fld_*
+          # - fld_*
 
           ### Commented out tasks, are rolled up in their larger non _* varients
           ### ----------------------------------------------------------------------------
@@ -173,18 +196,15 @@ jobs:
           - gsm8k
           - gsm8k_cot_self_consistency
           - hellaswag
-          - hellaswag_*
           - hendrycks_ethics
           # NOTE: ifeval requires langdetect
           - ifeval
-          - iwslt2017
-          - iwslt2017-*
           - kmmlu
-          - kmmlu_*
+          # - kmmlu_*
           - kobest
-          - kobest_*
+          # - kobest_*
           - lambada
-          - lambada_*
+          # - lambada_*
           - logieval
           - logiqa
           - logiqa2
@@ -196,9 +216,9 @@ jobs:
           - medqa_4options
           - mgsm_*
           - minerva_math
-          - minerva_math_*
+          # - minerva_math_*
           - mmlu
-          - mmlu_*
+          # - mmlu_*
           - mnli
           - mnli_mismatch
           - mrpc
@@ -212,69 +232,50 @@ jobs:
           - paws_*
           - pawsx
           - persona
-          - persona_*
-          - pile
-          - pile_*
+          # - persona_*
           - piqa
-          - polemo2
-          - polemo2_*
           - prost
           - pubmedqa
           - pythia
           - qa4mre
-          - qa4mre_*
-          - qasper
-          - qasper_*
+          # - qa4mre_*
           - qnli
           - qqp
           - race
-          - random_insertion
           - realtoxicityprompts
           - record
-          - reversed_words
           - rte
           - sciq
-          - scrolls
-          - self_consistency
           - sglue_rte
           - social_bias
           - social_iqa
-          - squadv2
           - sst2
-          - storycloze
-          - storycloze_*
-          - super-glue-*
           - swag
           - sycophancy
-          - sycophancy_on_*
-          - t0_eval
-          - toxigen
+          # - sycophancy_on_*
           - translation
           - triviaqa
           - truthfulqa
-          - truthfulqa_*
-          - unscramble
+          # - truthfulqa_*
           - webqs
           - wic
           - wikitext
           - winogrande
-          - wmt-ro-en-t5-prompt
-          - wmt-t5-prompt
           - wmt14
-          - wmt14-*
+          # - wmt14-*
           - wmt16
-          - wmt16-*
+          # - wmt16-*
           - wnli
           - wsc
           - wsc273
           - xcopa
-          - xcopa_*
+          # - xcopa_*
           - xnli
-          - xnli_*
+          # - xnli_*
           - xstorycloze
-          - xstorycloze_*
+          # - xstorycloze_*
           - xwinograd
-          - xwinograd_*
+          # - xwinograd_*
 
     # Name of the job
     name: "[${{ matrix.run_task }}] ${{ github.event.inputs.model_hf_repo }} - ${{ github.event.inputs.model_args }}"
