--- a/.github/workflows/gh-task-runner-single.yml
+++ b/.github/workflows/gh-task-runner-single.yml
@@ -1747,7 +1747,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - uses: ./.github/actions/gh-task-runner-composite
+      - name: Run the task
+        uses: ./.github/actions/gh-task-runner-composite
         with:
           run_task: ${{ github.event.inputs.run_task }}
           num_fewshot: ${{ github.event.inputs.num_fewshot }}
