--- a/.github/workflows/gh-task-runner-single.yml
+++ b/.github/workflows/gh-task-runner-single.yml
@@ -1716,9 +1716,6 @@ on:
         type: boolean
 
 env:
-  # Get the final task
-  RUN_TASK: ${{ github.event.inputs.custom_task || github.event.inputs.run_task }}
-
   # HF repo to sync to
   HF_REPO_SYNC: rwkv-x-dev/lm-eval-output
 
@@ -1750,7 +1747,7 @@ jobs:
       - name: Run the task
         uses: ./.github/actions/gh-task-runner-composite
         with:
-          run_task: ${{ github.event.inputs.run_task }}
+          run_task: ${{ github.event.inputs.custom_task || github.event.inputs.run_task }}
           num_fewshot: ${{ github.event.inputs.num_fewshot }}
           model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
           model_args: ${{ github.event.inputs.model_args }}
