--- a/.github/workflows/gh-task-runner-Alignment.yml
+++ b/.github/workflows/gh-task-runner-Alignment.yml
@@ -96,7 +96,7 @@ jobs:
     runs-on: 
       - ${{ github.event.inputs.backend }}
       - gpu-vram-${{ github.event.inputs.gpu_vram }}
-      - gpu-count-any
+      # - gpu-count-any
 
     # Actual task setup, and run steps
     steps:
